manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "mctest-c5ed"
    labels:
        app: "mctest-c5ed"
spec:
    type: ClusterIP
    ports:
    - port: 25565
      targetPort: 25565
      protocol: TCP
      name: http
    selector:
        app: "mctest-c5ed"
